[tool.poetry]
name = "vision-agent-tools"
version = "0.1.0"
description = "Toolbox for vision tasks"
authors = ["Landing AI <dev@landing.ai>"]
readme = "README.md"

[tool.poetry.urls]
"homepage" = "https://landing.ai"
"repository" = "https://github.com/landing-ai/vision-agent-tools"
"documentation" = "https://github.com/landing-ai/vision-agent-tools"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.7.4"
qreader = {version = "^3.14", optional = true}
numpy = ">=1.17,<2.0"
pillow = ">=10.0.1,<=15.0"
transformers = {extras = ["torch"], version = "^4.42.3", optional = true}
scipy = {version = "^1.13.1", optional = true}
gdown = "^5.1.0"
wget = "^3.2"
torch ="2.2.2"
loca = { git = "https://github.com/landing-ai/loca.git", branch = "main", optional = true }
depth-anything-v2 = { git = "https://github.com/landing-ai/depth-anything-v2.git", branch = "main", optional = true }
controlnet-aux = {version = "^0.0.9", optional = true}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"
ruff = "^0.5.0"
mypy = "^1.10.1"

[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.28"
griffe-fieldz = "^0.1.2"

[tool.poetry.extras]
all = ["qreader", "transformers", "scipy", "loca", "depth-anything-v2"]
qr-reader = ["qreader"]
owlv2 = ["transformers", "scipy"]
florencev2 = ["transformers", "scipy"]
loca-model = ["loca"]
depth-anything-v2-model = ["depth-anything-v2"]
nsfw-classification = ["transformers", "scipy"]
controlnet-aux = ["controlnet-aux"]

[build-system]
requires = ["poetry-core", "setuptools", "packaging", "wheel"]
build-backend = "poetry.core.masonry.api"
