[tool.poetry]
name = "vision-agent-tools"
version = "0.1.1"
description = "Toolbox for vision tasks"
authors = ["Landing AI <dev@landing.ai>"]
readme = "README.md"

[tool.poetry.urls]
"homepage" = "https://landing.ai"
"repository" = "https://github.com/landing-ai/vision-agent-tools"
"documentation" = "https://github.com/landing-ai/vision-agent-tools"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "^2.7.4"
qreader = { version = "^3.14", optional = true }
numpy = ">=1.17,<2.0"
pillow = ">=10.0.1,<=15.0"
transformers = { extras = ["torch"], version = "^4.42.3", optional = true }
scipy = { version = "^1.13.1", optional = true }
gdown = "^5.1.0"
wget = "^3.2"
torch = ">=2.3.1"
timm = { version = "^0.6.7", optional = true }
einops = { version = "^0.7.0", optional = true }
loca = { git = "https://github.com/landing-ai/loca.git", branch = "main", optional = true }
depth-anything-v2 = { git = "https://github.com/landing-ai/depth-anything-v2.git", branch = "main", optional = true }
controlnet-aux = { version = "^0.0.9", optional = true }
lmdeploy = { version = "^0.5.3", optional = true }
sam-2 = { git = "https://github.com/landing-ai/segment-anything-2.git", branch = "main", optional = true }
# this dependency is just here due to the ixc-25 model and because it's imported in one util file
# that we don't use: https://huggingface.co/internlm/internlm-xcomposer2d5-7b/blob/main/ixc_utils.py#L9
# as soon as they remove it we can extinguish from our side too 
decord = { version = "^0.6.0", optional = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"
ruff = "^0.5.0"
mypy = "^1.10.1"
ipykernel = "^6.29.5"
pytest-asyncio = "^0.23.7"
opencv-stubs = "^0.0.10"
opencv-python = "^4.10.0.84"

[tool.poetry.group.docs.dependencies]
mkdocstrings = { extras = ["python"], version = "^0.25.1" }
mkdocs-material = "^9.5.28"
griffe-fieldz = "^0.2.0"
opencv-python = "^4.10.0.84"

[tool.poetry.extras]
all = [
    "qreader",
    "transformers",
    "scipy",
    "loca",
    "depth-anything-v2",
    "timm",
    "einops",
    "controlnet-aux",
    "lmdeploy",
    "sam-2",
    "decord"
]
qr-reader = ["qreader"]
owlv2 = ["transformers", "scipy"]
florencev2 = ["transformers", "scipy", "timm", "einops"]
loca-model = ["loca"]
depth-anything-v2-model = ["depth-anything-v2"]
nsfw-classification = ["transformers", "scipy"]
controlnet-aux = ["controlnet-aux"]
florencev2-qa = ["transformers", "scipy", "timm", "einops"]
clip-media-sim = ["transformers"]
ixc-25 = ["transformers", "lmdeploy", "decord"]
florence2-sam2 = ["transformers", "scipy", "timm", "einops", "sam-2"]

[build-system]
requires = ["poetry-core", "setuptools", "packaging", "wheel", "torch"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
install-dependencies = "scripts.install_dependencies:install_dependencies"
